--- a/front/src/containers/App.css
+++ b/front/src/containers/App.css
@@ -1,43 +1,48 @@
 .App {
   text-align: center;
-  z-index: -2;
-  background-color: #282c34;
-
-}
-
-
-
-.App-header {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
   font-size: calc(10px + 2vmin);
+  line-height: 30px;
   font-weight: 300; 
-
-  color: white;
-    z-index: -2;
-
+  color: #282c34;
+  z-index: -2;
 }
+
+
+/* .App-header {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: calc(10px + 2vmin);
+  line-height: 30px;
+  font-weight: 300; 
+  color: #282c34;
+  z-index: -2;
+}  */
 /* .App-form { */
 
-/* } */
-.App-link {
-  color: #61dafb;
+  .App-logo {
+    animation: App-logo-spin infinite 10s linear;
+    height: 20vmin;
+    pointer-events: none;
+    /* display: block; */
+    margin: 0 auto;
+    padding: 10% auto;
+    width: 100%;
+      transform: scale(1.5);
+    z-index: 1;
+  }
+
+.Logo-pad {
+  padding: 10% auto;
+
 }
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-  /* display: block; */
-  margin: 0 auto;
-  padding: 0 auto;
-  width: 100%;
-    transform: scale(1.5);
-  z-index: 1;
-}
-/* 
+ 
 @keyframes App-logo-spin {
   from {
     transform: rotate(90deg);
@@ -48,13 +53,12 @@
 } */
 
 @keyframes App-logo-spin {
-  0% {
+  from {
     transform: rotate(360deg);
   }
-  50% {
+  to {
     transform: rotate(0deg);
   }
-  100% {
-    transform: rotate(360deg);
-  }
 }
+
+
